# perception_hardware

fake_hw_interface/: CMakeLists.txt  fake_hw_interface_plugins.xml  package.xml
fake_hw_interface/config/: fake_hw_params.yaml
fake_hw_interface/include/fake_hw_interface/: fake_system.hpp
fake_hw_interface/launch/: test.launch.py
fake_hw_interface/resource/: fake_hw_plugins.xml.bak
fake_hw_interface/src/: fake_system.cpp
fake_hw_interface/urdf/: fake_robot.urdf.xacro
perception_manager/: CMakeLists.txt  package.xml  perception_hardware_plugins.xml
perception_manager/include/mock_device/: mock_camera_data.hpp  mock_camera_device.hpp
perception_manager/include/perception_hardware/: base_types.hpp  device_base.hpp  device_factory.hpp  perception_system.hpp  t265_camera_data.hpp  t265_camera_device.hpp  utils.hpp
perception_manager/launch/: test.launch.py
perception_manager/src/perception_hardware/: perception_system.cpp  t265_camera_device.cpp
