<?xml version="1.0"?>
<package format="3">
<name>fake_hw_interface</name>
<version>0.0.0</version>
<description>Fake hardware interface for ros2_control learning</description>
<maintainer email="you@example.com">you</maintainer>
<license>Apache-2.0</license>


<buildtool_depend>ament_cmake</buildtool_depend>
<depend>rclcpp</depend>
<depend>hardware_interface</depend>
<depend>pluginlib</depend>
<depend>std_msgs</depend>
<depend>rclcpp_lifecycle</depend>

<test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>


<export>
    <build_type>ament_cmake</build_type>

    <!-- 🔥 关键：pluginlib 注册 -->
    <pluginlib
      plugin="${prefix}/share/fake_hw_interface/fake_hw_interface_plugins.xml"/>
  </export>
</package>
